[tool.poetry]
name = "roxy"
version = "0.1.0"
description = ""
authors = ["coolfool <coolfool149@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
APScheduler = "^3.9.1"
requests = "^2.27.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
